--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "JorgePeniaranda",
-  "name": "JorgePeniaranda",
+  "short_name": "Jorge Peñaranda",
+  "name": "Jorge Peñaranda",
   "icons": [
     {
       "src": "favicon.ico",
